--- a/SwiftySwitch/Base.lproj/Main.storyboard
+++ b/SwiftySwitch/Base.lproj/Main.storyboard
@@ -69,6 +69,9 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="dotColor">
                                         <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="dotTime">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vcd-tk-nBX" customClass="SwiftySwitch" customModule="SwiftySwitch" customModuleProvider="target">
